# hyper-engine

./: CMakeLists.txt  Makefile  build.py
include/glad/: glad.h
src/engine/: Application.cpp  Application.h  Entity2D.h  Input.h  Stats.h  Utility.h  Vector2.h  Window.cpp
src/glad/: glad.c
